[gd_scene load_steps=4 format=3 uid="uid://cknf1h0vct0uw"]

[ext_resource type="Shader" path="res://branches/gui/sidebar.gdshader" id="1_f13s3"]
[ext_resource type="Script" path="res://scripts/gui/PauseMenu.gd" id="2_fidih"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_huhex"]
shader = ExtResource("1_f13s3")

[node name="PauseMenu" type="Control"]
z_index = 98
z_as_relative = false
texture_filter = 2
material = SubResource("ShaderMaterial_huhex")
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 4
size_flags_vertical = 6
script = ExtResource("2_fidih")

[node name="BGDarkening" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.152941, 0.152941, 0.152941, 0.764706)

[node name="MenuPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.75
anchor_bottom = 0.75
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="MenuPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2

[node name="Buttons" type="HBoxContainer" parent="MenuPanel/VBox"]
layout_mode = 2

[node name="ResumeBtn" type="Button" parent="MenuPanel/VBox/Buttons"]
layout_mode = 2
text = "Resumir"

[node name="Control3" type="Control" parent="MenuPanel/VBox/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HelpBtn" type="Button" parent="MenuPanel/VBox/Buttons"]
layout_mode = 2
text = "Ayuda"

[node name="HomeBtn" type="Button" parent="MenuPanel/VBox/Buttons"]
layout_mode = 2
text = "Inicio"

[node name="Padding" type="Control" parent="MenuPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="MusicGroup" type="HBoxContainer" parent="MenuPanel/VBox"]
layout_mode = 2

[node name="MusicBtn" type="Button" parent="MenuPanel/VBox/MusicGroup"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Music"

[node name="MusicSld" type="HSlider" parent="MenuPanel/VBox/MusicGroup"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="SfxGroup" type="HBoxContainer" parent="MenuPanel/VBox"]
layout_mode = 2

[node name="SfxBtn" type="Button" parent="MenuPanel/VBox/SfxGroup"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "SFX"

[node name="SfxSld" type="HSlider" parent="MenuPanel/VBox/SfxGroup"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="TtsGroup" type="HBoxContainer" parent="MenuPanel/VBox"]
layout_mode = 2

[node name="TtsBtn" type="Button" parent="MenuPanel/VBox/TtsGroup"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "TTS"

[node name="TtsSld" type="HSlider" parent="MenuPanel/VBox/TtsGroup"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Padding2" type="Control" parent="MenuPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="MenuPanel/VBox/Buttons/ResumeBtn" to="." method="_on_resume"]
[connection signal="pressed" from="MenuPanel/VBox/Buttons/HelpBtn" to="MenuPanel/VBox/Buttons/HelpBtn" method="_on_pressed"]
[connection signal="pressed" from="MenuPanel/VBox/Buttons/HomeBtn" to="." method="_on_home"]
[connection signal="pressed" from="MenuPanel/VBox/MusicGroup/MusicBtn" to="." method="_on_music_toggle"]
[connection signal="value_changed" from="MenuPanel/VBox/MusicGroup/MusicSld" to="." method="_on_music_volume_changed"]
[connection signal="pressed" from="MenuPanel/VBox/SfxGroup/SfxBtn" to="." method="_on_sfx_toggle"]
[connection signal="value_changed" from="MenuPanel/VBox/SfxGroup/SfxSld" to="." method="_on_sfx_volume_changed"]
[connection signal="pressed" from="MenuPanel/VBox/TtsGroup/TtsBtn" to="." method="_on_tts_toggle"]
[connection signal="value_changed" from="MenuPanel/VBox/TtsGroup/TtsSld" to="." method="_on_tts_volume_changed"]
